# Restructuring

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: MILESTONE_1.md  MILESTONE_2.md  MILESTONE_3.md
src/: __init__.py  main.py
src/analyzer/: financial_analyzer.py  risk_calculator.py  trend_analyzer.py
src/api/: __init__.py  dart_client.py
src/dashboard/: __init__.py
src/database/: __init__.py
src/detector/: __init__.py
src/excel/: __init__.py
src/models/: corporation.py
src/parser/: opinion_parser.py  xml_parser.py
tests/: __init__.py  test_dart_client.py  test_emphasis_parser.py  test_opinion_parser.py  test_xml_parser.py
