[tool.poetry]
name = "ddip"
version = "0.1.0"
description = "DART Data Intelligence Platform - Financial audit analysis and risk detection tool"
authors = ["Gradiser <gradiser@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
lxml = "^4.9.0"
beautifulsoup4 = "^4.12.0"
rapid-fuzz = "^3.0.0"
tenacity = "^8.2.0"
streamlit = "^1.28.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^23.7.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
